--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Log In"
+                android:text="@string/logg_inn"
+                android:backgroundTint="@color/buttonColor"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintStart_toStartOf="@+id/inputPassword"
                 app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
@@ -52,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:ems="10"
-                android:hint="@string/login_username"
+                android:hint="@string/e_mail"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toEndOf="@+id/textView"
@@ -75,7 +76,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"
-                android:text="Register with email"
+                android:backgroundTint="@color/buttonColor"
+                android:text="@string/registrer_med_e_mail"
                 app:layout_constraintEnd_toEndOf="@+id/buttonLogIn"
                 app:layout_constraintStart_toStartOf="@+id/buttonLogIn"
                 app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />
@@ -86,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:ems="10"
-                android:hint="@string/login_password"
+                android:hint="@string/passord"
                 android:inputType="textPassword"
                 android:minHeight="48dp"
                 app:layout_constraintEnd_toEndOf="@+id/inputUsername"
