--- a/app/src/main/res/layout-land/fragment_gain.xml
+++ b/app/src/main/res/layout-land/fragment_gain.xml
@@ -11,7 +11,7 @@
         android:id="@+id/divider"
         android:layout_width="1dp"
         android:layout_height="0dp"
-        android:background="@color/purple_500"
+        android:background="@color/main_color"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
