--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="main_color">#1565c0</color>
-    <color name="purple_700">#b6b6b6</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="primaryColor_gray">#b6b6b6</color>
+    <color name="primaryColor_white">#e8e8e8</color>
+    <color name="white">#ffffff</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="primaryColor">#e8e8e8</color>
-    <color name="primaryLightColor">#ffffff</color>
-    <color name="primaryDarkColor">#b6b6b6</color>
-    <color name="secondaryColor">#1565c0</color>
+    <color name="primaryColor_blue">#1565c0</color>
+    <color name="secondaryColor_blue">#003c8f</color>
     <color name="buttonColor">#5e92f3</color>
-    <color name="secondaryDarkColor">#003c8f</color>
+
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#ffffff</color>
 </resources>
