--- a/app/src/main/res/layout/fragment_stock_list.xml
+++ b/app/src/main/res/layout/fragment_stock_list.xml
@@ -11,7 +11,7 @@
         android:id="@+id/OverviewRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#938282"
+        android:background="@color/secondaryColor_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
