--- a/app/src/main/res/layout-land/fragment_detail_stock_fragments_wrapper.xml
+++ b/app/src/main/res/layout-land/fragment_detail_stock_fragments_wrapper.xml
@@ -54,8 +54,8 @@
             tools:layout="@layout/fragment_graph2" />
 
         <ScrollView
-            android:layout_width="282dp"
-            android:layout_height="266dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -68,7 +68,7 @@
                 android:id="@+id/SingleStockAdditionalDataFragmentContainer"
                 android:name="no.stockwallet.Fragments.DetailedStockFragments.AdditionalDataFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 tools:layout="@layout/fragment_additional_data" />
         </ScrollView>
 
